Fixed preFilter flickering and add row template for the selected values

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -24,17 +24,13 @@
   opacity: 0;
 }
 
-.default {
-  color: black;
-}
-
 .current {
-  color: steelblue;
+  color: #b10000;
   font-weight: bold;
 }
 
 .truth {
-  color: green;
+  color: #e65c00;
   font-weight: bold;
 }
 
